--- a/14. Security and Authentication/security-example/package.json
+++ b/14. Security and Authentication/security-example/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
